# biclique

./: README.md
logs/: 100amav5.txt  BC2_actor2_44_corerd  BC2_ama_44_corerd  BC2_bookcrossing_44_corerd  BC2_citeseer_44_corerd  BC2_dblp_44_corerd  BC2_dbpedia_44_corerd  BC2_github_44_corerd  BC2_imdb_44_corerd  BC2_munmun_44_corerd  BC2_stackoverflow_44_corerd  BC2_youtube_44_corerd  BC44swap_munmun_degree  BCp4q4_actor2.txt_degree  BCp4q4_ama.txt_degree  BCp4q4_bookcrossing.txt_degree  BCp4q4_citeseer.txt_degree  BCp4q4_dblp.txt_degree  BCp4q4_dbpedia.txt_degree  BCp4q4_editenwiki.txt_degree  BCp4q4_editidwiki.txt_degree  BCp4q4_github.txt_degree  BCp4q4_imdb.txt_degree  BCp4q4_movielens.txt_degree  BCp4q4_mummun.txt_degree  BCp4q4_stackoverflow.txt_degree  BCp4q4_youtube.txt_degree  bcAll.txt  cppm_actor2_degree_100000  cppm_actor2_degree_1000000_O3.txt  cppm_actor2_degree_100000_O3.txt  cppm_amazon_degree_100000  cppm_bookcrossing_degree_100000  cppm_citeseer_degree_100000  cppm_dblp_degree_100000  cppm_dblp_degree_100000_O3.txt  cppm_dbpedia_degree_100000  cppm_editid_degree_100000  cppm_github_degree_100000  cppm_github_degree_100000_O3.txt  (+51 more)
python/: avgerrVarH.py  bcAllTime.py  errVarT.py  errvarH.py  exp_bcAll.py  exp_pzz.py  exp_specificPQ.py  exp_v25All.py  exp_varH.py  exp_varT.py  experiments1.py  experiments2.py  experiments3.py  maxZ.py  nohup.out  out.txt  plotAllError.py  plotErr.py  plotSpecificPQ.py  plotSpecificPQError.py  printDataSets.py  printResult.py  rho.py  sparseAndDense.py  sparseAndDenseV5.py  specificAll.py  specificAllFix.py  specificPQVarT.py  specificVarTTime.py  testPartition.py  timeVarH.py  (+2 more)
src/: CMakeLists.txt
src/biClique/: CMakeLists.txt  Makefile  bcAndPath.cpp  cmake_install.cmake  colorPath.cpp  colorPathAV5.cpp  pivotAndPath.cpp  pivotAndPathSamplev5.cpp  rawEdgePivot.cpp  rawEdgePivot.h  turan.cpp  turan.h
src/biGraph/: Makefile  biGraph.hpp  cmake_install.cmake
src/runner/: run.cpp
src/tools/: CMakeLists.txt  Makefile  cmake_install.cmake
(+24290 files in other folders)
